--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,13 @@
-fastapi~=0.89.1
-SQLAlchemy~=1.4.46
-pydantic~=1.10.4
-uvicorn~=0.20.0
-python-dotenv~=0.21.1
-psycopg2-binary~=2.9.5
 alembic~=1.9.2
-pytest~=7.2.1
+fastapi~=0.89.1
 httpx~=0.23.3
-sqlalchemy_utils~=0.39.0
-redis~=4.4.2
 pre-commit~=3.0.1
+psycopg2-binary~=2.9.5
+pydantic~=1.10.4
+pytest~=7.2.1
+python-dotenv~=0.21.1
+redis~=4.4.2
+SQLAlchemy~=1.4.46
+sqlalchemy_utils~=0.39.0
+types-redis~=4.4.0.4
+uvicorn~=0.20.0
