--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
 
 # Отсортировывает импорты в проекте
 -   repo: https://github.com/pycqa/isort
-    rev: 5.5.2
+    rev: 5.12.0
     hooks:
       - id: isort
         exclude: __init__.py
@@ -20,6 +20,7 @@ repos:
     rev: v3.3.1
     hooks:
     -   id: pyupgrade
+        exclude: __init__.py, */migrations/
         args: [--py310-plus]
 
 # Форматирует код под PEP8
@@ -27,6 +28,7 @@ repos:
     rev: v2.0.1
     hooks:
     -   id: autopep8
+        exclude: __init__.py
 
 # Сканер стилистических ошибок, нарушающих договоренности PEP8
 -   repo: https://github.com/PyCQA/flake8
@@ -34,4 +36,4 @@ repos:
     hooks:
     -   id: flake8
         exclude: __init__.py, */migrations/
-        args: [ "--ignore=E501,F821,F403,F405" ]
+        args: [ "--ignore=E501,F821" ]
