separation of containers

--- a/.env_test.example
+++ b/.env_test.example
@@ -1,10 +1,9 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_SERVER=db
+POSTGRES_SERVER=db_test
 POSTGRES_PORT=5432
 POSTGRES_DB=test
-TEST=YES
-REDIS_SERVER=redis
+REDIS_SERVER=redis_test
 REDIS_PORT=6379
 REDIS_DB=2
 SQLALCHEMY_SILENCE_UBER_WARNING=1
