--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -5,14 +5,54 @@ services:
     build: .
     command: >
       sh -c "cd app &&
-             pytest -vv"
+             alembic upgrade head &&
+             pytest -vv &&
+             cd .. &&
+             uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 9000"
     volumes:
       - ./:/app/
+    environment:
+      - CONFIG_FILE=../.env_test
     env_file:
       - ./.env_test
+    ports:
+      - "9000:9000"
+    depends_on:
+      db_test:
+        condition: service_healthy
+      redis_test:
+        condition: service_healthy
     networks:
-      - menu_network
+      - menu_test
+
+  db_test:
+    image: postgres:15.1-alpine
+    env_file:
+      - .env_test
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}" ]
+      interval: 1s
+      timeout: 3s
+      retries: 10
+    networks:
+      - menu_test
+
+  redis_test:
+    image: redis:latest
+    env_file:
+      - .env_test
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 1s
+      timeout: 3s
+      retries: 10
+    networks:
+      - menu_test
 
 networks:
-  menu_network:
-    external: true
+  menu_test:
+    name: menu_test
