--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   server_test:
+    container_name: test_menu_server
     build: .
     command: >
       sh -c "cd app &&
@@ -26,13 +27,12 @@ services:
       - menu_test
 
   db_test:
+    container_name: test_menu_db
     image: postgres:15.1-alpine
     env_file:
       - .env_test
-    ports:
-      - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}" ]
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
       interval: 1s
       timeout: 3s
       retries: 10
@@ -40,11 +40,10 @@ services:
       - menu_test
 
   redis_test:
+    container_name: test_menu_redis
     image: redis:latest
     env_file:
       - .env_test
-    ports:
-      - "6379:6379"
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 1s
